# airline

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: pythonpackage.yml  pythonpublish.yml
airline/: __init__.py  awsbatch.py  awslambda.py  client.py  event.py  format_exception.py
skyline/: __init__.py  awslambda.py  client.py  event.py  threadlocal_client.py
tests/: test_client.py  test_dots_to_deep.py  test_event.py  test_format_exception.py  test_skyline.py
